<resources>
    <string name="app_name">Chatify</string>
    <string name="logo_description">Chatify</string>
    <string name="first_name">Frist Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">SIGNUP</string>
    <string name="exit">EXIT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="icon_and_tab">Icon and Tabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="rate1">4.9\n8 Rating</string>
    <string name="blink">Blink: Better\nAffiliate Links</string>
    <string name="llc">Squibner LLC</string>
    <string name="included">Also Included In</string>
    <string name="affiliate">Affiliate Linking Pack</string>
    <string name="prod">Productivity</string>
    <string name="price"> $ 7.99</string>
    <string name="four">4+</string>
    <string name="age"> age</string>
    <string name="New">What\s New</string>
    <string name="version">Version History</string>
    <string name="ver">Version 2.7</string>
    <string name="time">3mo ago</string>
    <string name="description">- Improved Apple Music linking support\n- Improved user interface on iPhone X\n- Better support for converting shor URL</string>
    <string name="more">more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="follow_me">Follow Me</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="add_to_group">Add to group</string>
    <string name="_0332_000_225">+332 000 225</string>
    <string name="tazeenMail">tazeenbatool@gmail.com</string>
    <string name="_360">360</string>
    <string name="following">Following</string>
    <string name="_1205">1205</string>
    <string name="followers">Followers</string>
    <string name="_125">125</string>
    <string name="photos">Photos</string>
    <string name="tazeen_batool">Tazeen Batool</string>
    <string name="next_pic">Next Picture</string>
</resources>
