<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/allura"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="64dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/edittext1"
        app:layout_constraintStart_toEndOf="@+id/textView1" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="45dp"
        android:layout_marginBottom="400dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/first_name"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext1"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email_id"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext2"
        app:layout_constraintVertical_bias="0.05" />
    <EditText
        android:id="@+id/edittext4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="250dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext3"
        app:layout_constraintVertical_bias="0.05" />
    <EditText
        android:id="@+id/edittext5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:hint="@string/retype_password"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext4"
        app:layout_constraintVertical_bias="0.05" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/male"
        android:checked="true"

        android:textColor="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext5"
        app:layout_constraintVertical_bias="0.035" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="184dp"
        android:layout_marginTop="8dp"
        android:text="@string/female"
        android:textColor="@color/colorlightPrimary"
        android:theme="@style/MyEditTextTheme1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext5"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:text="@string/exit"
        android:onClick="exit"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:onClick="btnGo"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorlightPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="24dp"
        android:text="@string/login_now"
        android:textColor="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>