<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="PlaceholderFragment2">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/allura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/colorConstraint"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="451dp"
            tools:layout_editor_absoluteY="3dp" />


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:foregroundGravity="center"
                android:outlineProvider="background"
                android:paddingTop="10dp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/blink"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/llc"
                android:textColor="@color/colorlightPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/constraintbutton"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/update"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/colorConstraint"
                    android:src="@drawable/ic_more_horiz_black_24dp" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.CardView
                android:id="@+id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:background="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttons"
                app:layout_constraintVertical_bias="0.173">


                <RatingBar
                    android:id="@+id/ratingBar2"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/rate1"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ageno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp"
                    android:text="@string/four"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp"
                    android:text="@string/age"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/New"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:paddingTop="10dp"
                        android:text="@string/version"
                        android:textColor="@color/colorConstraint"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView12"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/ver"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/textView13"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/time"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView14"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/description"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/textView16"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/more"
                        android:textColor="@color/colorConstraint"
                        android:textSize="20sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="183dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/included"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_below="@id/textView5"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:src="@drawable/profile" />



                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView5"
                        android:layout_toEndOf="@id/imageView1"
                        android:paddingTop="10dp"
                        android:text="@string/affiliate"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView6"
                        android:layout_toEndOf="@id/imageView1"
                        android:text="@string/prod"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/textView6"
                        android:background="@drawable/text_shape"
                        android:paddingBottom="3dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="3dp"
                        android:text="@string/price"
                        android:textAlignment="center"
                        android:textColor="@color/colorConstraint" />
                </RelativeLayout>



            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">


               <TextView
                   android:id="@+id/textView18"
                   android:layout_width="183dp"
                   android:layout_height="wrap_content"
                   android:layout_gravity="start"
                   android:paddingEnd="10dp"
                   android:paddingStart="10dp"
                   android:paddingTop="10dp"
                   android:text="Preview"
                   android:textColor="@color/colorPrimaryDark"
                   android:textSize="20sp"
                   android:textStyle="bold"

                   />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:src="@drawable/profile"

                android:layout_below="@+id/textView18"

                />
            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorConstraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav2" />
</android.support.constraint.ConstraintLayout>